<resources>
    <string name="app_name">MediVault</string>
    <string name="enter_mob_number">Enter your mobile number.</string>
    <string name="register">Register</string>
    <string name="login_desc">Enter your mobile number to get started</string>
    <string name="main_desc">Enter the patient\'s mobile number</string>
    <string name="verification_text">Code</string>
    <string name="action_sign_in_next">Continue</string>
    <string name="register_desc">Enter your name and address which the item is to be dispatched.</string>
    <string name="action_register">Continue</string>
    <string name="edit_str">Edit</string>
    <string name="confirmation_text_dialog">Is this OK, or would you like to edit this number?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">Please enter a 10 digit phone number</string>
    <string name="title_activity_doctor_list">DoctorList</string>
    <string name="title_activity_home">Home</string>
    <string name="chirp_app_key">ZBH8vddyJdCwsezkwlxdduI0p</string>
    <string name="chirp_app_secret">mLlWM9tnIThgpoj8ugRkqeX2wI2ykXCBYDTIQCKEYGBe8GgMKN</string>
    <string name="title_activity_prescription_list">PrescriptionList</string>
    <string name="font_bold_path">fonts/HelveticaNeueLt.ttf</string>
    <string name="disease_hint">Select the Disease.</string>
    <string name="prescription_hint">Enter the prescription.</string>
    <string name="doctor_add_details">Submit</string>
    <string name="title_activity_lab_report">LabReport</string>
    <string name="title_activity_lab_home">LabHome</string>

</resources>
