<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#fff"
    android:id="@+id/constraint_layout">

    <android.support.v7.widget.Toolbar
        fontPath="@string/font_bold_path"
        android:id="@+id/toolbar"
        app:titleTextColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/medivault" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/main_desc"
        android:textColor="@color/main_colour_blue_dark"
        android:textSize="@dimen/android_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:inputType="phone"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </android.support.design.widget.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressbar"
        style="Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/action_sign_in_next"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="0.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
